@@ -1,0 +1,60 @@
+country_decisions = {
+
+	damietta_rahulids_tame_the_desert = {
+		potential = {
+			tag = RHL
+			NOT = {
+				has_country_flag = damietta_rahulids_taming_desert
+			}
+			has_country_flag = damietta_rahulids_first_raid
+		}
+
+		allow = {
+			treasury = 150
+			stability = 1
+			dip_tech = 5
+		}
+
+		effect = {
+			set_country_flag = damietta_rahulids_taming_desert
+			custom_tooltip = damietta_rahulids_taming_desert.tt
+			random_owned_province = {
+				limit = {
+					any_empty_neighbor_province = {
+						OR = {
+							area = cyrenaica_area
+							province_id = 5273
+							province_id = 5272
+						}
+					}
+				}
+				random_empty_neighbor_province = {
+					limit = {
+						OR = {
+							area = cyrenaica_area
+							province_id = 5273
+							province_id = 5272
+						}
+					}
+					
+					create_colony = 500
+					add_province_modifier = {
+						name = damietta_rahulids_settlers_in_desert
+						duration = 3650
+					}
+				}
+			}
+		}
+
+		ai_will_do = {
+			factor = 1
+			modifier = {
+				factor = 2
+				num_of_owned_provinces_with = {
+					value = 5
+					has_province_modifier = damietta_rahulids_province_raided
+				}
+			}
+		}
+	}
+}
