@@ -1,0 +1,129 @@
+############################################
+# Events for the Rahulids
+#
+# by neothiamin
+############################################
+
+namespace = damietta_rahulids
+
+#Raid in [Root.GetName]
+
+province_event = {
+	id = damietta_rahulids.1
+	title = damietta_rahulids.1.t
+	desc = damietta_rahulids.1.desc
+	picture = VILLAGE_RAIDED_eventPicture
+
+	trigger = {
+		owned_by = RHL
+		#OR = {
+		#	province_id = 2325
+		#	province_id = 2318
+		#	province_id = 2317
+		#	province_id = 2319
+		#	province_id = 4320
+		#	province_id = 4319
+		#	province_id = 1231
+		#}
+		any_empty_neighbor_province = {
+			culture_group = berber_group
+		}
+		NOT = {
+			has_province_modifier = damietta_rahulids_province_raided
+			has_country_flag = damietta_rahulids_taming_desert
+		}
+	}
+
+	immediate = {
+		owner = {
+			set_country_flag = damietta_rahulids_first_raid
+		}
+	}
+
+	mean_time_to_happen = {
+		months = 60
+	}
+
+	#Send a regiment
+	option = {
+		name = damietta_rahulids.1.a
+		owner = {
+			add_manpower = -0.25
+		}
+		add_province_modifier = {
+			name = damietta_rahulids_province_raided
+			duration = 1825
+		}
+	}
+
+	#What do we care about a bunch of desert-dwellers?
+	option = {
+		name = damietta_rahulids.1.b
+		add_province_modifier = {
+			name = damietta_rahulids_province_raided
+			duration = 3650
+		}
+	}
+}
+
+#Settlers in the Desert
+country_event = {
+	id = damietta_rahulids.2
+	title = damietta_rahulids.2.t
+	desc = damietta_rahulids.2.desc
+	picture = COLONIZATION_eventPicture
+
+	trigger = {
+		tag = RHL
+		any_owned_province = {
+			any_neighbor_province = {
+				OR = {
+					area = cyrenaica_area
+					province_id = 5273
+					province_id = 5272
+				}
+				is_city = no
+			}
+		}
+		has_country_flag = damietta_rahulids_taming_desert
+		NOT = {
+			any_owned_province = {
+				is_colony = yes
+			}
+		}
+	}
+
+	mean_time_to_happen = {
+		months = 60
+	}
+
+	#Hurrah!
+	option = {
+		name = damietta_rahulids.2.a
+		random_owned_province = {
+			limit = {
+				any_empty_neighbor_province = {
+					OR = {
+						area = cyrenaica_area
+						province_id = 5273
+						province_id = 5272
+					}
+				}
+			}
+			random_empty_neighbor_province = {
+				limit = {
+					OR = {
+						area = cyrenaica_area
+						province_id = 5273
+						province_id = 5272
+					}
+				}
+				create_colony = 500				
+				add_province_modifier = {
+					name = damietta_rahulids_settlers_in_desert
+					duration = 3650
+				}
+			}
+		}
+	}
+}
