@@ -1,7 +1,7 @@
 #New Province
 
 capital = "Selima"
-culture = al_misr_arabic
+culture = nubian
 religion = sunni
 trade_goods = unknown
 hre = no
