@@ -1,3 +1,3 @@
-l_english:
+﻿l_english:
  DAMIETTA_BM:0 "Damietta"
  DAMIETTA_BM_DESC:0 "Welcome to Damietta! At some point this bookmark will be filled with lots of nice lore and intrigue, but for now I just wanted to get rid of the raw localization keys. Enjoy!"
