@@ -1,5 +1,7 @@
 v0.0.4:
 
++ Added events and a decision that allows the Rahulids to tame the desert.
+
 * Fixed various localization inconsistencies in national ideas. Thanks CouchCoach for the reports!
 * Added modifier descriptions to "Inhabitants Expelled", "Jizya", and "Local Governor"
 
